# scheinfirmen-at

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/skills/release/: SKILL.md
.gemini/: GEMINI.md
.github/workflows/: ci.yml  release.yml  update.yml
data/: STATS.md  scheinfirmen.csv  scheinfirmen.csv-metadata.json  scheinfirmen.json-schema.json  scheinfirmen.jsonl  scheinfirmen.xml  scheinfirmen.xsd
src/scheinfirmen_at/: __init__.py  __main__.py  cli.py  convert.py  download.py  normalize.py  parse.py  schema.py  stats.py  validate.py  verify.py
tests/: conftest.py  test_cli.py  test_convert.py  test_download.py  test_normalize.py  test_parse.py  test_problem_rows_pipeline.py  test_schema_compliance.py  test_stats.py  test_validate.py  test_verify.py
tests/fixtures/: sample_raw.csv
